# oboe_tutorial1

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/bda/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DrumPlayerJNI.cpp
app/src/main/java/com/bda/myapplication/: DrumPlayer.kt  DrumThumperActivity.kt  TriggerPad.kt
app/src/main/res/layout/: drumthumper_activity.xml
app/src/test/java/com/bda/myapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
iolib/: build.gradle
iolib/src/main/: AndroidManifest.xml
iolib/src/main/cpp/: CMakeLists.txt
iolib/src/main/cpp/player/: SampleBuffer.cpp
parselib/: build.gradle
parselib/src/main/: AndroidManifest.xml
parselib/src/main/cpp/: CMakeLists.txt
